// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchExpression 1`] = `
Object {
  "block": Object {
    "caseEntries": Array [
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": Object {
    "_meta": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`MatchFunction 1`] = `
Object {
  "block": Object {
    "caseEntries": Array [],
    "kind": "BlockOfCases",
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": Object {
    "definitions": Array [
      Object {
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.cases 1`] = `
Object {
  "block": Object {
    "caseEntries": Array [
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": Object {
    "definitions": Array [
      Object {
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 1`] = `
Object {
  "block": Object {
    "caseEntries": Array [
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [
              Object {
                "expression": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 33,
                      "line": 14,
                      "offset": 253,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 14,
                      "offset": 248,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 26,
                      "line": 14,
                      "offset": 246,
                    },
                    "start": Object {
                      "column": 21,
                      "line": 14,
                      "offset": 241,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": Object {
    "definitions": Array [
      Object {
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 2`] = `
Object {
  "block": Object {
    "caseEntries": Array [
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      Object {
        "block": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [
              Object {
                "expression": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 33,
                      "line": 14,
                      "offset": 226,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 14,
                      "offset": 221,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 26,
                      "line": 14,
                      "offset": 219,
                    },
                    "start": Object {
                      "column": 21,
                      "line": 14,
                      "offset": 214,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": Object {
    "_meta": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`NamedRecordDefinition 1`] = `
Object {
  "block": Object {
    "kind": "Block",
    "statements": Array [],
  },
  "guard": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": Object {
            "definitions": Array [
              Object {
                "expression": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                      "offset": 29,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                      "offset": 24,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": Object {
                  "_meta": Object {
                    "end": Object {
                      "column": 23,
                      "line": 1,
                      "offset": 22,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 1,
                      "offset": 17,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "kind": "CaseEntry",
}
`;
